# OpenGL

./: .gitignore  CMakeLists.txt  build-commands-Ninja.sh  build-commands-VisualStudio.ps1
include/glad/: glad.h
libs/: glfw3.lib
src/: Algebra.h  Rectangle.cpp  Rectangle.h  Render.cpp  Shader.cpp  Shader.h  TriangleMesh.cpp  TriangleMesh.h  Window.h  glad.c  src.h
src/shaders/: Fragment.txt  Vertex.txt  Vertex2.txt
